# SegConv_CitySense

./: .gitignore  pyproject.toml
models/: convnext.py
scripts/: 01A_extract_seg_ratios.py  01B_extract_seg_ratios_color.py  02_train_convnet.py  03_extract_cls_probs.py
utils/: dataset.py
